add: addint the needed endpoints and related modifications
